# plotverse

./: README.md  __init__.py  pyproject.toml  setup.py
plotverse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_imports.py
